...
        [self configureTutorialGatesToPosition];
    }
}

- (void)installSelectionControls {
    self.selectObjectsButton = [[UIBarButtonItem alloc] initWithTitle:@"Select" style:UIBarButtonItemStylePlain target:self action:@selector(toggleObjectSelection:)];
    self.selectObjectsButton.accessibilityIdentifier = @"selectComponents";
    self.duplicateObjectsButton = [[UIBarButtonItem alloc] initWithTitle:@"Duplicate (0)" style:UIBarButtonItemStylePlain target:self action:@selector(duplicateObjectSelection:)];
    self.duplicateObjectsButton.accessibilityIdentifier = @"duplicateSelection";
    self.deleteObjectsButton = [[UIBarButtonItem alloc] initWithImage:[UIImage systemImageNamed:@"trash"] style:UIBarButtonItemStylePlain target:self action:@selector(deleteObjectSelection:)];
    self.deleteObjectsButton.accessibilityLabel = @"Delete selection";
    self.deleteObjectsButton.accessibilityIdentifier = @"deleteSelection";
    [self refreshSelectionControls];
}

- (NSArray<UIBarButtonItem *> *)selectionBarButtonItems {
    if (!self.document || self.document.isProblem || !self.selectObjectsButton) return @[];
    return self.selectingObjects ? @[self.selectObjectsButton, self.deleteObjectsButton, self.duplicateObjectsButton] : @[self.selectObjectsButton];
...

- (void)configureHistoryControls {
    self.undoBarButtonItem = [[UIBarButtonItem alloc] initWithImage:[UIImage systemImageNamed:@"arrow.uturn.backward"] style:UIBarButtonItemStylePlain target:self action:@selector(undoCircuitEdit:)];
    self.redoBarButtonItem = [[UIBarButtonItem alloc] initWithImage:[UIImage systemImageNamed:@"arrow.uturn.forward"] style:UIBarButtonItemStylePlain target:self action:@selector(redoCircuitEdit:)];
    self.undoBarButtonItem.accessibilityLabel = @"Undo";
    self.redoBarButtonItem.accessibilityLabel = @"Redo";
    self.undoBarButtonItem.accessibilityIdentifier = @"circuit.undo";
    self.redoBarButtonItem.accessibilityIdentifier = @"circuit.redo";
    [[NSNotificationCenter defaultCenter] addObserver:self selector:@selector(historyDidChange:) name:CircuitDocumentHistoryDidChangeNotification object:nil];
    [[NSNotificationCenter defaultCenter] addObserver:self selector:@selector(historyOperationDidFinish:) name:NSUndoManagerDidUndoChangeNotification object:nil];
    [[NSNotificationCenter defaultCenter] addObserver:self selector:@selector(historyOperationDidFinish:) name:NSUndoManagerDidRedoChangeNotification object:nil];
    [[NSNotificationCenter defaultCenter] addObserver:self selector:@selector(circuitDidRestore:) name:CircuitDocumentCircuitDidRestoreNotification object:nil];
    [self updateHistoryControls];
}
...
                    [self unpause];
                }
            }];
            [self finishCircuitEdit];
            if (failureMessage) {
                UIAlertController *alert = [UIAlertController alertControllerWithTitle:nil message:failureMessage preferredStyle:UIAlertControllerStyleAlert];
                [alert addAction:[UIAlertAction actionWithTitle:@"OK" style:UIAlertActionStyleDefault handler:nil]];
                [self presentViewController:alert animated:YES completion:nil];
                return;
            }
        }]];
        [actionSheet addAction:[UIAlertAction actionWithTitle:@"Cancel" style:UIAlertActionStyleCancel handler:nil]];
        actionSheet.popoverPresentationController.sourceView = self.view;
...
