...
                            <constraint firstAttribute="bottom" secondItem="isi-1p-ZHn" secondAttribute="bottom" id="ttf-Kg-M0G"/>
                            <constraint firstItem="0G8-Qd-p90" firstAttribute="top" secondItem="2Ns-D2-J66" secondAttribute="bottom" id="uVE-3P-YbF"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="eXc-qK-JHX">
                        <nil key="title"/>
                        <barButtonItem key="rightBarButtonItem" title="Check Answer" style="done" id="nPY-62-rYn">
                            <connections>
                                <action selector="checkAnswer:" destination="2hA-su-58g" id="j9W-uy-MKu"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="You've unlocked the" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jeB-14-Il0">
                                <rect key="frame" x="0.0" y="127" width="540" height="48"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="24"/>
                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="You can now use it in 'Playground' mode." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zLz-CU-FdW">
                                <rect key="frame" x="0.0" y="401" width="540" height="54"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="22"/>
                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l8j-5L-aMi">
...
                            </connections>
                        </barButtonItem>
                        <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="9OF-Pa-xpp">
                            <rect key="frame" x="231" y="7" width="307" height="30"/>
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <segments>
                                <segment title="Problems"/>
                                <segment title="Playground"/>
                            </segments>
                            <connections>
                                <action selector="didChangeCircuitsProblemsSegment:" destination="bMV-Gg-1ab" eventType="valueChanged" id="9Bo-r7-HsS"/>
                            </connections>
                        </segmentedControl>
...
